score validation and some more bugs